--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "kisjasserver",
+  "name": "FireworkCrafting",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node L06_Server/SERVER/Server.js"
+  "dependencies": {
+    "@types/node": "^14.14.28",
+    "mongodb": "^3.6.4"
   },
-  "author": "weiberta",
-  "license": "ISC"
+  "devDependencies": {
+    "@types/mongodb": "^3.6.7"
+  }
 }
